--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -1,10 +1,15 @@
 ifeq ($(subdir),math)
+sysdep_routines += s_isnan-power7 s_isnan-power6 s_isnan-power5 s_isnan-ppc32 \
+		   s_isnanf-power6 s_isnanf-power5 s_isnanf-ppc32
+
 libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-ppc32 \
 			s_llrint-power6 s_llrint-power4 s_llrint-ppc32 \
 			s_llround-power6 s_llround-power5+ s_llround-power4 \
 			s_llround-ppc32 w_sqrt-power5 w_sqrt-power4 \
 			w_sqrt-ppc32 w_sqrtf-power5 w_sqrtf-power4 \
-			w_sqrtf-ppc32
+			w_sqrtf-ppc32 s_isnan-power7 s_isnan-power6 \
+			s_isnan-power5 s_isnan-ppc32 s_isnanf-power6 \
+			s_isnanf-power5 s_isnanf-ppc32
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
