--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -1,6 +1,10 @@
 ifeq ($(subdir),math)
 sysdep_routines += s_isnan-power7 s_isnan-power6 s_isnan-power5 s_isnan-ppc32 \
-		   s_isnanf-power6 s_isnanf-power5 s_isnanf-ppc32
+		   s_isnanf-power6 s_isnanf-power5 s_isnanf-ppc32 \
+		   s_isinf-power7 s_isinf-ppc32 s_isinff-ppc32 \
+		   s_finite-power7 s_finite-c s_finitef-c s_copysign-power6 \
+		   s_copysign-ppc32 s_modf-power5+ s_modf-c s_modff-power5+ \
+		   s_modff-c
 
 libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-ppc32 \
 			s_llrint-power6 s_llrint-power4 s_llrint-ppc32 \
@@ -9,7 +13,8 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-ppc32 \
 			w_sqrt-ppc32 w_sqrtf-power5 w_sqrtf-power4 \
 			w_sqrtf-ppc32 s_isnan-power7 s_isnan-power6 \
 			s_isnan-power5 s_isnan-ppc32 s_isnanf-power6 \
-			s_isnanf-power5 s_isnanf-ppc32
+			s_isnanf-power5 s_isnanf-ppc32 s_isinf-power7 \
+			s_isinf-ppc32 s_isinff-ppc32
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
