--- a/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc32/fpu/multiarch/Makefile
@@ -13,7 +13,8 @@ libm-sysdep_routines += s_llrintf-power6 s_llrintf-power4 s_llrintf-ppc32 \
 			s_isnan-power5 s_isnan-ppc32 s_isnanf-power6 \
 			s_isnanf-power5 s_isnanf-ppc32 s_isinf-power7 \
 			s_isinf-ppc32 s_isinff-ppc32 s_finite-power7 \
-			s_finite-ppc32 s_finitef-ppc32
+			s_finite-ppc32 s_finitef-ppc32 s_ceil-power5+ \
+			s_ceil-ppc32 s_ceilf-power5+ s_ceilf-ppc32
 
 CFLAGS-s_llround.c = -fno-builtin-llroundf
 endif
