--- a/sysdeps/powerpc/powerpc64/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc64/multiarch/Makefile
@@ -4,5 +4,6 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memcmp-ppc64 memset-power7 memset-power6 memset-power4 \
 		   memset-ppc64 mempcpy-power7 mempcpy-ppc64 memchr-power7 \
 		   memchr-ppc64 memrchr-power7 memrchr-ppc64 \
-		   rawmemchr-power7 rawmemchr-ppc64
+		   rawmemchr-power7 rawmemchr-ppc64 strlen-power7 \
+		   strlen-ppc64
 endif
