--- a/sysdeps/powerpc/powerpc64/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc64/multiarch/Makefile
@@ -6,8 +6,12 @@ sysdep_routines += memcpy-power7 memcpy-a2 memcpy-power6 memcpy-cell \
 		   memchr-ppc64 memrchr-power7 memrchr-ppc64 \
 		   rawmemchr-power7 rawmemchr-ppc64 strlen-power7 \
 		   strlen-ppc64 strnlen-power7 strnlen-ppc64 \
-		   strcasecmp-power7 strcasecmp_l-power7
+		   strcasecmp-power7 strcasecmp_l-power7 \
+		   strncase-power7 strncase_l-power7
 
 # Refrain GCC to create recursive calls
 CFLAGS-rtld-memset.c += -fno-tree-loop-distribute-patterns
+
+CFLAGS-strncase-power7.c += -mcpu=power7 -funroll-loops
+CFLAGS-strncase_l-power7.c += -mcpu=power7 -funroll-loops
 endif
