--- a/sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile
@@ -2,7 +2,8 @@ ifeq ($(subdir),math)
 sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 		   s_isnan-power5 s_isnan-ppc64 s_isnanf-ppc64 \
 		   s_llround-power6x s_llround-power5+ s_llround-ppc64 \
-		   s_copysign-power6 s_copysign-ppc64
+		   s_copysign-power6 s_copysign-ppc64 s_finite-power7 \
+		   s_finite-ppc64 s_finitef-ppc64
 
 libm-sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 			s_isnan-power5 s_isnan-ppc64 s_isnanf-ppc64 \
@@ -13,5 +14,6 @@ libm-sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 			s_round-ppc64 s_roundf-power5+ s_roundf-ppc64 \
 			s_trunc-power5+ s_trunc-ppc64 s_truncf-power5+ \
 			s_truncf-ppc64 s_copysign-power6 s_copysign-ppc64 \
-			s_llrint-power6x s_llrint-ppc64
+			s_llrint-power6x s_llrint-ppc64 s_finite-power7 \
+			s_finite-ppc64 s_finitef-ppc64
 endif
