--- a/sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile
+++ b/sysdeps/powerpc/powerpc64/fpu/multiarch/Makefile
@@ -4,7 +4,8 @@ sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 		   s_llround-power6x s_llround-power5+ s_llround-ppc64 \
 		   s_copysign-power6 s_copysign-ppc64 s_finite-power7 \
 		   s_finite-ppc64 s_finitef-ppc64 s_isinff-ppc64 \
-		   s_isinf-power7 s_isinf-ppc64
+		   s_isinf-power7 s_isinf-ppc64 s_modf-power5+ s_modf-ppc64 \
+		   s_modff-power5+ s_modff-ppc64
 
 libm-sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 			s_isnan-power5 s_isnan-ppc64 s_isnanf-ppc64 \
@@ -19,9 +20,12 @@ libm-sysdep_routines += s_isnan-power7 s_isnan-power6x s_isnan-power6 \
 			s_finite-ppc64 s_finitef-ppc64 s_isinff-ppc64 \
 			s_isinf-power7 s_isinf-ppc64 s_logb-power7 \
 			s_logbf-power7 s_logbl-power7 s_logb-ppc64 \
-			s_logbf-ppc64 s_logbl-ppc64
+			s_logbf-ppc64 s_logbl-ppc64 s_modf-power5+ \
+			s_modf-ppc64 s_modff-power5+ s_modff-ppc64
 
 CFLAGS-s_logbf-power7.c = -mcpu=power7
 CFLAGS-s_logbl-power7.c = -mcpu=power7
 CFLAGS-s_logb-power7.c = -mcpu=power7
+CFLAGS-s_modf-power5+.c = -mcpu=power5+
+CFLAGS-s_modff-power5+.c = -mcpu=power5+
 endif
