--- a/configure.in
+++ b/configure.in
@@ -216,6 +216,22 @@ AC_ARG_ENABLE([bind-now],
 	      [bindnow=no])
 AC_SUBST(bindnow)
 
+AC_ARG_ENABLE([mpx],
+	      AC_HELP_STRING([--enable-mpx],
+			     [turn on Intel MPX extension]),
+	      [enable_mpx=$enableval],
+	      [enable_mpx=no])
+
+AC_SUBST(enable_mpx)
+AC_SUBST(ASFLAGS)
+if test "$ac_test_CFLAGS" != set && test "$enable_mpx" = yes ; then
+	CFLAGS="$CFLAGS -g -fcheck-pointers -mmpx -fno-chkp-check-incomplete-type";
+fi
+
+if test "$enable_mpx" = yes ; then
+   ASFLAGS="$ASFLAGS -g -fcheck-pointers -mmpx -Wa,-madd-bnd-prefix"
+fi
+
 dnl On some platforms we cannot use dynamic loading.  We must provide
 dnl static NSS modules.
 AC_ARG_ENABLE([static-nss],
